# vsreview

./: README.md
client/vsreview/: CHANGELOG.md  README.md  package.json
client/vsreview/src/: SidebarProvider.ts  extension.ts
server/: .env  .env.example  .gitignore  Cargo.toml  Rocket.toml  package-lock.json  package.json
server-rs/: Cargo.toml  docker-compose.yml  util.sh
server-rs/migrations/2021-01-21-085444_create_user_table/: up.sql
server-rs/migrations/2021-01-21-085456_create_question_table/: down.sql
server-rs/migrations/2021-01-22-044415_create_answer_table/: down.sql  up.sql
server-rs/migrations/2021-01-22-051309_create_like_table/: up.sql
server-rs/src/: error.rs  main.rs  schema.rs  utils.rs
server-rs/src/db/: mod.rs  user.rs
server-rs/src/models/: answer.rs  question.rs  user.rs
server/migrations/2021-01-21-085444_create_user_table/: down.sql  up.sql
server/migrations/2021-01-21-085456_create_question_table/: up.sql
server/migrations/2021-01-22-044415_create_answer_table/: up.sql
server/migrations/2021-01-22-051309_create_like_table/: down.sql
server/src/: error.rs  index.ts  main.rs  schema.rs  utils.rs
server/src/db/: user.rs
server/src/entities/: Answer.ts  Like.ts  Question.ts  User.ts
server/src/models/: question.rs  user.rs
web/: package.json
web/public/: index.html
web/src/: App.tsx
web/src/components/: Home.tsx  Questions.tsx
