[package]
name = "server"
version = "0.1.0"
authors = ["Henry Boisdequin"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["postgres"] }
chrono = "0.4.19"
bcrypt = "0.9.0"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_postgres_pool"]
